# docgraph

./: .girignore  .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/: categories.ttl  docgraph.ttl  events.ttl  financial_documents.ttl  fs.ttl  models.ttl  papyrus.ttl  self.ttl  shapes.ttl
data/templates/: _meta.ttl
docs/: ISO-15926-2_2003_information_objects.md  classify_design.md  iso15926-part2.txt  iso_part2_coverage.md
src/: agent.py  annotated_view.py  classifier.py  classify.py  coverage.py  deltas.py  diagram.py  embeddings.py  extract.py  extractor.py  html_io.py  ingest.py  ingest_pdf.py  log_panels.py  models.py  ontology.py  pdfinfo.py  project.py  prompts.py  results.py  shape_extractor.py  sources.py  tasks.py  ttl_ingest.py
tests/: test_align.py  test_annotated_view.py  test_classifier.py  test_cli_deltas.py  test_consolidate.py  test_coverage.py  test_deltas.py  test_ext_ontology.py  test_extract_part14_axioms.py  test_extract_part14_bitmap.py  test_extract_part14_combined.py  test_extract_part14_enrich.py  test_extract_part14_ext_dedup.py  test_extract_part14_mega_walker.py  test_extract_part14_property_walker.py  test_extract_part14_rdl.py  test_extract_part14_root_walker.py  test_extract_part14_structural.py  test_extract_part14_template_recognizer.py  test_extract_part14_walker.py  test_find_entity.py  test_html_io.py  test_iso_templates.py  test_promote.py  test_tasks.py  test_template_expand.py  test_template_invocation.py  test_template_loader.py  test_template_recognize.py
(+145 files in other folders)
