[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "docgraph"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "rdflib>=7.0.0",
    "pyshacl>=0.25.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
docgraph = "main:cli"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.data-files]
"data" = ["data/docgraph.ttl", "data/financial_documents.ttl", "data/models.ttl", "data/shapes.ttl"]
